[tool.poetry]
name = "horton"
version = "0.0.3"
description = ""
authors = ["Alexander Lavrov <internal@egnod.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.2"
faust = "^1.10.4"
motor = "^2.2.0"
sitri = "^0.7.3"
aiohttp = "^3.6.2"
pyyaml = "^5.3.1"
pandas = "^1.1.2"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
